# debriefeur

./: .env.example  .gitignore  DEVELOPMENT_DOCUMENT.md  PROJECT_DOCUMENT.md  README.md  install.sh  pyproject.toml
debriefeur/: __init__.py  adapters.py  cli.py  config.py  engine.py  llm.py  prompts.py  sessions.py
debriefeur.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
